--- a/demoApps/todoApp/package.json
+++ b/demoApps/todoApp/package.json
@@ -12,9 +12,11 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "css-loader": "^0.28.9",
+    "istanbul-instrumenter-loader": "^3.0.1",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.2",
+    "uglifyjs-webpack-plugin": "^1.2.4",
     "webpack": "^3.11.0"
   }
 }
