--- a/package.json
+++ b/package.json
@@ -5,8 +5,14 @@
   "main": "testRunner.js",
   "scripts": {
     "build:todoApp": "cd ./demoApps/todoApp && webpack",
+    "build:todoApp:prod": "cd ./demoApps/todoApp && webpack --env.prod",
+    "build:todoApp:coverage": "cd ./demoApps/todoApp && webpack --env.coverage",
     "build": "npm run build:todoApp",
+    "build:prod": "npm run build:todoApp:prod",
+    "build:coverage": "npm run build:todoApp:coverage",
     "test:todoApp": "node testRunner --config ./demoApps/todoApp/test.config.js",
+    "test:todoApp:reports": "node testRunner --config ./demoApps/todoApp/test.config.js --use-reporter",
+    "test:reports": "npm run test:todoApp:reports",
     "test": "npm run test:todoApp"
   },
   "repository": {
@@ -36,6 +42,7 @@
     "iedriver": "^3.9.2",
     "jimp": "^0.2.28",
     "mocha": "^5.0.5",
+    "mocha-junit-reporter": "^1.17.0",
     "nyc": "^11.6.0",
     "resemblejs": "^2.10.1",
     "sauce-connect-launcher": "^1.2.3",
