--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "test:todoApp:coverage": "node testRunner --config ./demoApps/todoApp/test.config.js --add-coverage-report",
     "test:reports": "npm run test:todoApp:reports",
     "test:coverage": "npm run test:todoApp:coverage",
-    "test": "npm run test:todoApp"
+    "test": "npm run test:todoApp",
+    "install:todoApp": "cd ./demoApps/todoApp && npm install",
+    "postinstall": "npm run install:todoApp"
   },
   "repository": {
     "type": "git",
@@ -48,6 +50,7 @@
     "jimp": "^0.2.28",
     "mocha": "^5.0.5",
     "mocha-junit-reporter": "^1.17.0",
+    "npm": "^5.8.0",
     "nyc": "^11.6.0",
     "resemblejs": "^2.10.1",
     "sauce-connect-launcher": "^1.2.3",
