Fix safari issue and update travis yml

--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "build": "npm run build:todoApp",
     "build:prod": "npm run build:todoApp:prod",
     "build:coverage": "npm run build:todoApp:coverage",
+    "test": "npm run test:todoApp",
+    "test:ci": "npm run build:coverage && npm run test:coverage",
     "test:todoApp": "node testRunner --config ./demoApps/todoApp/test.config.js",
     "test:todoApp:reports": "node testRunner --config ./demoApps/todoApp/test.config.js --use-reporter",
     "test:todoApp:coverage": "node testRunner --config ./demoApps/todoApp/test.config.js --add-coverage-report",
     "test:reports": "npm run test:todoApp:reports",
     "test:coverage": "npm run test:todoApp:coverage",
-    "test": "npm run build:coverage && npm run test:coverage",
     "install:todoApp": "cd ./demoApps/todoApp && npm install",
     "postinstall": "npm run install:todoApp"
   },
