--- a/demoApps/todoApp/package.json
+++ b/demoApps/todoApp/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
     "css-loader": "^0.28.9",
     "istanbul-instrumenter-loader": "^3.0.1",
     "node-sass": "^4.7.2",
